--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:8889/j2ee_td_spring
-spring.datasource.username = j2ee_td_spring
+spring.datasource.url = jdbc:mysql://localhost:3306/j2ee_gittracker
+spring.datasource.username = j2ee_gittracker
 spring.datasource.password = qwertyuiop
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto = update
@@ -11,3 +11,6 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/api
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.doc-expansion=none
+
+spring.security.user.name=matisse
+spring.security.user.password=not24get
